--- a/reglas.html
+++ b/reglas.html
@@ -92,7 +92,7 @@
   </tr>
   <tr>
     <td>&nbsp;</td>
-    <td width="700" height="100"><a href="https://xat.com/onlyfans"><img src="banner.png" alt="" width="700"></a></td>
+    <td width="700" height="100"><a href="https://xat.com/onlyfans"><img src="Banner.png" alt="" width="700"></a></td>
     <td>&nbsp;</td>
     <td width="700" height="100"><a href="https://xat.com/onlyfans"><img src="Banner.png" alt="" width="703"></a></td>
     <td>&nbsp;</td>
@@ -108,9 +108,9 @@
   </tr>
   <tr>
     <td>&nbsp;</td>
-    <td width="700" height="650"><img src="Reglas1.png" alt=""></td>
+    <td width="700" height="650"><img src="REGLAS1.png" alt=""></td>
     <td>&nbsp;</td>
-    <td width="700" height="650"><img src="Reglas2.png" alt=""></td>
+    <td width="700" height="650"><img src="REGLAS2.png" alt=""></td>
     <td>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
