--- a/premium.html
+++ b/premium.html
@@ -92,7 +92,7 @@
   </tr>
   <tr>
     <td>&nbsp;</td>
-    <td width="700" height="100"><a href="https://xat.com/onlyfans"><img src="banner.png" alt="" width="700"></a></td>
+    <td width="700" height="100"><a href="https://xat.com/onlyfans"></a><img src="Banner.png" width="719" height="88" longdesc="Banner.png"></td>
     <td>&nbsp;</td>
     <td width="700" height="100"></td>
     <td>&nbsp;</td>
