--- a/ganadores.html
+++ b/ganadores.html
@@ -92,7 +92,7 @@
   </tr>
   <tr>
     <td>&nbsp;</td>
-    <td width="700" height="100"><a href="https://xat.com/onlyfans"><img src="banner.png" alt="" width="700"></a></td>
+    <td width="700" height="100"><a href="https://xat.com/onlyfans"><img src="Banner.png" alt="" width="700"></a></td>
     <td>&nbsp;</td>
     <td width="700" height="100"><a href="https://xat.com/onlyfans"></a></td>
     <td>&nbsp;</td>
